--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "pinia": "^2.2.2",
+    "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
+    "vue-router": "^4.4.5",
+    "vue3-datepicker": "^0.4.0",
+    "vue3-table-lite": "^1.4.0",
+    "vuex": "^4.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +26,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12"
   },
   "eslintConfig": {
     "root": true,
